tests/error/errors_on_usage/var_undefined_before_modifier1.err
Error: Variable not defined (at $FILE:8:8)
  | 
6 | @guppy
7 | def main() -> None:
8 |     x = i
  |         ^ `i` is not defined

Guppy compilation failed due to 1 previous error
